Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24463

galera.galera_sst_mysqldump_with_key MTR failed: 'INSERT failed: 1213: Deadlock found when trying to get lock

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.18
    • 10.4.18, 10.5.9
    • Galera, Tests, MTR
    • None
    • kvm-deb-xenial-amd64

    Description

      galera.galera_sst_mysqldump_with_key failed on BB 10.4 CS: "galera_sst_mysqldump_with_key.test at line 27:
      At line 17: query 'INSERT INTO t1 VALUES ('node2_committed_before')' failed: 1213: Deadlock found when trying to get lock;".
      It seems to be a sporadic issue.

      stdio.log:

      10.4.18, 4addd31531f722438b8b702c9cd00c28b61efce3, kvm-deb-xenial-amd64

      galera.galera_sst_mysqldump_with_key 'innodb,release' [ fail ]
              Test ended at 2020-12-11 12:06:58
       
      CURRENT_TEST: galera.galera_sst_mysqldump_with_key
      mysqltest: In included file "./suite/galera/include/galera_st_kill_slave.inc": 
      included from /usr/share/mysql/mysql-test/suite/galera/t/galera_sst_mysqldump_with_key.test at line 27:
      At line 17: query 'INSERT INTO t1 VALUES ('node2_committed_before')' failed: 1213: Deadlock found when trying to get lock; try restarting transaction
       
      The result from queries just before the failure was:
      < snip >
      COUNT(*) = 0
      1
      DROP TABLE t1;
      COMMIT;
      SET AUTOCOMMIT=ON;
      Performing State Transfer on a server that has been killed and restarted
      connection node_1;
      CREATE TABLE t1 (f1 CHAR(255)) ENGINE=InnoDB;
      SET AUTOCOMMIT=OFF;
      START TRANSACTION;
      INSERT INTO t1 VALUES ('node1_committed_before');
      INSERT INTO t1 VALUES ('node1_committed_before');
      INSERT INTO t1 VALUES ('node1_committed_before');
      INSERT INTO t1 VALUES ('node1_committed_before');
      INSERT INTO t1 VALUES ('node1_committed_before');
      COMMIT;
      connection node_2;
      SET AUTOCOMMIT=OFF;
      START TRANSACTION;
      INSERT INTO t1 VALUES ('node2_committed_before');
      

      Server logs.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            stepan.patryshev Stepan Patryshev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.