MDEV-24463 : galera.galera_sst_mysqldump_with_key MTR failed: 'INSERT failed: 1213: Deadlock found when trying to get lock

We need to complete SST if both new and old start positions are
not same as initial positions. If they are initial positions
just set local uuid and seqno.